# Computational-Methods

./: Computational Methods_Bednarek.sln
Computational Methods g++ style (CLion)/: CMakeCache.txt  CMakeLists.txt  ClassDiagram.cd  Computational Methods_Bednarek.vcxproj  Computational Methods_Bednarek.vcxproj.filters  Computational_Methods_Bednarek  Computational_Methods_Bednarek.cbp  Display.cpp  Display.h  ExplicitUpwindScheme.h  GeneralScheme.cpp  GeneralScheme.h  ImplicitUpwindScheme.h  Lax_Wendroff.cpp  Lax_Wendroff.h  Makefile  MathFunctions.h  Matrix.cpp  Matrix.h  Richtmyer_multi_step.cpp  Richtmyer_multi_step.h  cmake_install.cmake  main.cpp
Computational Methods g++ style (CLion)/Debug/: Display.sbr  GeneralScheme.sbr  Matrix.sbr  Richtmyer_multi_step.sbr
Computational Methods g++ style (CLion)/Debug/Computat.BB0FE75C.tlog/: BscMake.command.1.tlog  CL.command.1.tlog  CL.write.1.tlog  bscmake.read.1.tlog  link.command.1.tlog  link.read.1.tlog
Version working on Astral/: CMP  CMakeLists.txt  Display.cpp  ExplicitUpwindScheme.cpp  ExplicitUpwindScheme.h  GeneralScheme.cpp  GeneralScheme.h  ImplicitUpwindScheme.cpp  ImplicitUpwindScheme.h  Lax_Wendroff.cpp  Lax_Wendroff.h  Matrix.cpp  Matrix.h  Richtmyer_multi_step.h  main.cpp
Version working on Astral/Results/: Sign_ExplicitUpwindSchemeResults_t=5_points=200_CFL=0.xls  Sign_GeneralSchemeResults_t=5_points=200_CFL=0.xls  Sign_ImplicitUpwindSchemeResults_t=5_points=200_CFL=0.xls  Sign_Lax_WendroffResults_t=5_points=200_CFL=0.xls  Sign_RichtmyerMultiStepSchemeResults_t=5_points=200_CFL=0.xls
(+93 files in other folders)
